--- a/style.css
+++ b/style.css
@@ -1,1 +1,75 @@
-* { font-family: 'Spoqa Han Sans Neo', 'sans-serif'; }
+/* default */
+:root{
+    /* color */
+    --header-font-color:#fff;
+    --header-bg-color:#E3B7A0;
+    --nav-hover-bg-color:rgba(255,255,255,0.1);
+    --nav-hover-border-color:rgba(255,255,255,0.12);
+    /* font-weight */
+    --font-weight-light:400;
+    --font-weight-bold:700;
+    --font-weight-heavy:900;
+}
+* { 
+    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
+    box-sizing: border-box;
+ }
+
+body{
+    margin: 0;
+}
+
+ul,li{
+    list-style: none;
+    margin: 0;
+    cursor: pointer;
+}
+
+button{
+    cursor: pointer;
+}
+
+/* header */
+header{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 25px 35px;
+    color: var(--header-font-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+    background-color: var(--header-bg-color);
+    box-sizing: border-box;
+}
+
+.logo{
+    width: 400px;
+    height: 350px;
+}
+
+.category{
+    display: flex;
+    font-weight: var(--font-weight-heavy);
+}
+.category li{
+    margin-left: 40px;
+    padding: 10px 20px;
+    border: 1px solid transparent;
+}
+.category li:hover{
+    border: 1px solid var(--nav-hover-border-color);
+    background: var(--nav-hover-bg-color);
+}
+/* main */
+section{
+    width: 100%;
+    height: 100vh;
+    border-bottom: 2px solid var(--header-bg-color);
+}
+
+section:first-child{
+    background-image:url('./images/bg.png');
+}
+/* footer */
