--- a/style.css
+++ b/style.css
@@ -5,14 +5,20 @@
     --header-bg-color:#E3B7A0;
     --hover-bg-color:rgba(255,255,255,0.1);
     --hover-border-color:rgba(255,255,255,0.12);
+    --light-brown:#886F6F;
     /* font-weight */
     --font-weight-light:400;
     --font-weight-bold:700;
     --font-weight-heavy:900;
+    /* font-size */
+    --font-size-title:45px;
+    --font-size-subtitle:32px;
+    --font-size-description:16px;
 }
 * { 
     font-family: 'Spoqa Han Sans Neo', 'sans-serif';
     box-sizing: border-box;
+    cursor: default;
  }
 
 body{
@@ -22,7 +28,7 @@ body{
 ul,li{
     list-style: none;
     margin: 0;
-    cursor: pointer;
+    padding: 0;
 }
 
 button{
@@ -59,6 +65,7 @@ header{
     margin-left: 40px;
     padding: 10px 20px;
     border: 1px solid transparent;
+    cursor: pointer;
 }
 .category li:hover{
     border: 1px solid var(--hover-border-color);
@@ -70,6 +77,7 @@ section{
     width: 100%;
     height: 100vh;
     border-bottom: 2px solid var(--header-bg-color);
+    padding: 0px 30px;
 }
 
 /* main-home */
@@ -81,7 +89,7 @@ section.home{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 100px;
+    padding-top: 100px;
 }
 
 section.home h1{
@@ -107,5 +115,89 @@ section.home .contact{
 section.home .contact:hover{
     background-color: var(--hover-bg-color);
 }
+
+/* main-About */
+
+section.about{
+    text-align: center;
+}
+
+.stacks{
+    display: flex;
+    justify-content: space-between;
+    margin: 3em 0;
+}
+.stack{
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3em;
+}
+.stack-content{
+    color: var(--light-brown);
+}
+.stack-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 1px solid var(--header-bg-color);
+}
+
+.stack-icon i{
+    font-size: var(--font-size-title);
+    color: var(--header-bg-color);
+}
+
+.stack-category{
+    font-size: var(--font-size-subtitle);
+}
+
+
+.career{
+    display: flex;
+    align-self: flex-start;
+    align-items: center;
+    text-align: start;
+}
+.university{
+    width: 45px;
+    height: 50px;
+    margin-left: 50px;
+    margin-right: 20px;
+    margin-top: 15px;
+}
+
+.career-content h3{
+    font-weight: var(--font-weight-light);
+    font-size: var(--font-size-description);
+}
+
+.career-content .history{
+    font-weight: var(--font-weight-light);
+    font-size: var(--font-size-description);
+    color: var(--light-brown);
+}
+
+/* section-common */
+.title{
+    margin:0;
+    font-size: var(--font-size-title);
+    padding-top: 2.5em;
+}
+
+.description{
+    font-size: var(--font-size-description);
+    padding-top: 1em;
+}
+
+section:not(.home){
+    padding: 0 80px;
+}
+
+
 
 /* footer */
