--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
     --project-hover-bg-color:#BF9270;
     --project-bg-color:#EDCDBB;
     --main-color:#BF9270;
+    --testimonial-bg-color:#EEEEEE;
+    --testimonial-name-color:#F76E11;
     /* font-weight */
     --font-weight-light:400;
     --font-weight-bold:700;
@@ -404,6 +406,53 @@ section.mywork{
 .divider{
     width: 50%;
     border: 1px solid black;
+}
+
+/* section-testimonials */
+section.testimonials{
+    text-align: center;
+    background-color: var(--testimonial-bg-color);
+}
+
+.testimonial{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height: 100px;
+    margin-top: 40px;
+}
+
+.testimonial:first-of-type .testimonial-profile{
+    margin-right: 10px;
+}
+
+.testimonial+.testimonial .testimonial-profile{
+    order: 1;
+    margin-left: 10px;
+}
+
+.testimonial-profile{
+    width: 100px;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.testimonial-content{
+    width: 80%;
+    height: 100%;
+    text-align: start;
+    background-color: var(--light-white);
+    padding: 5px;
+    border-radius: 10px;
+}
+
+.testimonial-content p{
+    margin-bottom: 3px;
+}
+
+.testimonial-name{
+    color: var(--testimonial-name-color);
 }
 
 
