--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     --main-color:#BF9270;
     --testimonial-bg-color:#EEEEEE;
     --testimonial-name-color:#F76E11;
+    --footer-bg-color:#DD4A48;
     /* font-weight */
     --font-weight-light:400;
     --font-weight-bold:700;
@@ -94,7 +95,6 @@ header{
 section{
     width: 100%;
     height: 100vh;
-    border-bottom: 2px solid var(--header-bg-color);
     padding: 0px 30px;
 }
 
@@ -457,3 +457,24 @@ section.testimonials{
 
 
 /* footer */
+.footer{
+    background-color: var(--footer-bg-color);
+    height: 15rem;
+    color: var(--light-white);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 15px;
+}
+.footer title{
+    margin: 0;
+}
+
+.footer .email{
+    margin: 20px 0px;
+}
+
+.footer .git{
+    font-size: var(--font-size-title);
+}
