--- a/style.css
+++ b/style.css
@@ -178,10 +178,13 @@ section.about{
 @keyframes rotate {
     0%{
         transform: rotate(0deg) scale(1,1);
+        filter: brightness(1);
     }50%{
         transform: rotate(-22.5deg) scale(1.2,1.2);
+        filter: brightness(1.1);
     }100%{
         transform: rotate(-35deg) scale(1.3,1.3);
+        filter: brightness(1.2);
     }
 }
 
