--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
     --testimonial-bg-color:#EEEEEE;
     --testimonial-name-color:#F76E11;
     --footer-bg-color:#DD4A48;
+    --arrow-bg-color:#694E4E;
     /* font-weight */
     --font-weight-light:400;
     --font-weight-bold:700;
@@ -54,6 +55,29 @@ button{
     cursor: pointer;
     outline: none;
     background-color: transparent;
+}
+
+/* arrow-up */
+.arrow-container{
+    cursor: pointer;
+    font-size: var(--font-size-subtitle);
+    text-align: center;
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: var(--arrow-bg-color);
+}
+
+.arrow-container i{
+    transition: all var(--animation-duration) ease-in;
+}
+
+.arrow-container:hover > i{
+    color: var(--light-white);
+    transform: scale(1.3,1.3);
 }
 
 /* header */
