--- a/style.css
+++ b/style.css
@@ -442,6 +442,16 @@ section.mywork{
         transform: translateY(0px);
     }
 }
+@keyframes test{
+    from{
+        opacity: 0.6;
+        transform: scale(1,1);
+    }to{
+        opacity: 1;
+        transform: scale(0.96,0.96);
+    }
+}
+
 
 .project-description{
     width: 100%;
@@ -452,11 +462,11 @@ section.mywork{
     justify-content: center;
     opacity: 1;
     position: absolute;
+    text-align: center;
 }
 
 .project-description p{
-    /* color: var(--main-color); */
-    color: var(--light-white);
+    color: var(--footer-bg-color);
     font-weight: var(--font-weight-bold);
 }
 
