--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ header{
     z-index: 99999;
     top: 0;
     width: 100%;
-    padding: 25px 35px;
+    padding: 25px 10px;
     color: var(--light-white);
     display: flex;
     justify-content: space-between;
@@ -103,8 +103,44 @@ header{
 }
 
 .logo{
-    width: 400px;
-    height: 350px;
+    width: 300px;
+    height: 280px;
+}
+
+#bar{
+    font-size: var(--font-size-subtitle);
+    display: none;
+}
+
+@media screen and (max-width: 1100px) {
+    #bar{
+        display: block;
+        padding-right: 20px;
+        cursor: pointer;
+    }
+    .category{
+        visibility: hidden;
+        width: 100%;
+        text-align: center;
+        flex-direction: column;
+        position: absolute;
+        right: 1px;
+        top: 100px;
+        background-color: #4D4D4D;
+    }
+    .category li{
+        margin-right: 40px;
+    }
+    .display{
+        visibility: visible;
+    }
+}
+
+@media screen and(max-width:600px) {
+    .logo{
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .category{
