--- a/style.css
+++ b/style.css
@@ -112,37 +112,6 @@ header{
     display: none;
 }
 
-@media screen and (max-width: 1100px) {
-    #bar{
-        display: block;
-        padding-right: 20px;
-        cursor: pointer;
-    }
-    .category{
-        visibility: hidden;
-        width: 100%;
-        text-align: center;
-        flex-direction: column;
-        position: absolute;
-        right: 1px;
-        top: 100px;
-        background-color: #4D4D4D;
-    }
-    .category li{
-        margin-right: 40px;
-    }
-    .display{
-        visibility: visible;
-    }
-}
-
-@media screen and(max-width:600px) {
-    .logo{
-        width: 100%;
-        height: 100%;
-    }
-}
-
 .category{
     display: flex;
     font-weight: var(--font-weight-heavy);
@@ -587,4 +556,40 @@ section.testimonials{
 
 .footer .git{
     font-size: var(--font-size-title);
+}
+
+
+/* media query */
+@media screen and (max-width: 1100px) {
+    #bar{
+        display: block;
+        padding-right: 20px;
+        cursor: pointer;
+    }
+    .category{
+        visibility: hidden;
+        width: 100%;
+        text-align: center;
+        flex-direction: column;
+        position: absolute;
+        right: 1px;
+        top: 100px;
+        background-color: #4D4D4D;
+    }
+    .category li{
+        margin-right: 40px;
+    }
+    .display{
+        visibility: visible;
+    }
+}
+
+@media screen and (max-width:600px) {
+    section{
+        height: auto;
+    }
+    .stacks{
+        flex-direction: column;
+        align-items: center;
+    }
 }
