--- a/style.css
+++ b/style.css
@@ -295,7 +295,6 @@ section.skills{
     display: flex;
     width: 70%;
     height: 350px;
-    background-color: white;
     margin-top: 40px;
     color: var(--light-white);
 }
@@ -582,14 +581,28 @@ section.testimonials{
     .display{
         visibility: visible;
     }
+    section{
+        height: 100%;
+    }
 }
 
 @media screen and (max-width:600px) {
     section{
-        height: auto;
+        height: 100%;
     }
     .stacks{
         flex-direction: column;
         align-items: center;
+    }
+    .skills-container{
+        flex-direction: column;
+        height: auto;
+        width: 100%;
+    }
+    .another{
+        width: 100%;
+    }
+    .skills-box{
+        width: 100%;
     }
 }
