give margin to each section

--- a/style.css
+++ b/style.css
@@ -279,7 +279,8 @@ section.about{
 
 
 section:not(.home){
-    padding: 0 80px;
+    padding-left:80px;
+    padding-right:80px;
 }
 
 
@@ -583,6 +584,7 @@ section.testimonials{
     }
     section{
         height: 100%;
+        padding-bottom: 30px;
     }
     .testimonial{
         flex-direction: column;
@@ -603,6 +605,7 @@ section.testimonials{
 @media screen and (max-width:600px) {
     section{
         height: 100%;
+        padding-bottom: 30px;
     }
     .stacks{
         flex-direction: column;
